AFS_Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Plan_OI__c</fullName>
        <label>Account Plan OI%</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Account_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Classification__c</fullName>
        <description>Reflects Client Portfolio Management (CPM) classification (Diamond, Foundation, Portfolio or Opportunistic).</description>
        <label>Client Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Mega Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunistic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_QA_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client QA Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostPoint_Invoice_Customer_ID__c</fullName>
        <label>Costpoint Invoice Customer ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CostPoint_Invoice_Customer__c</fullName>
        <label>Costpoint Invoice Customer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Director_MC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P_Global_Client_Account_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Executive responsible for managing the relationship with an AFS Client. Global Client Account Lead may oversee several Clients.</description>
        <label>Global Client Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>Technical Field: Account Number of corresponding Portfolio account. This should be null if Account Type != &apos;Client&apos;.</description>
        <label>Portfolio</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Captures the source of creation for the record. This will be provide the ability to differentiate if the record was created in Salesforce or is a legacy record.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>STaR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Portfolio__c</fullName>
        <description>Technical Field: Account Number of corresponding Sub Portfolio account. This should be null if Account Type != &apos;Client&apos;.</description>
        <label>Sub Portfolio</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Customer_ID_Text__c</fullName>
        <label>Summary Customer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Customer_ID__c</fullName>
        <formula>Parent.Summary_Customer_ID_Text__c</formula>
        <label>Summary Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Account_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ASM_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Client_Account_Lead__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Defense - ASM</value>
        </filters>
        <label>All ASM Accounts</label>
        <sharedTo>
            <group>ASM_RO</group>
            <group>ASM_RW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Client_Account_Lead__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Client_Account_Lead__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Accounts I Own</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Teams</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Client_Account_Lead__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>Account Teams I&apos;m On</label>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>The entity who will receive the services or products AFS provides (e.g., DC Department of Healthcare Finance). Selecting this Account Record Type will allow you to create a new AFS client to associate with new opportunities, contacts, and/or activities.</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portfolio</fullName>
        <active>true</active>
        <description>The Entity (e.g., AFS or ASM), Portfolio (e.g., Civilian), or Sub-Portfolio (e.g., Citizen Services) to which many client accounts are aligned. Selecting this Account Record Type will allow you to create a new Entity, Portfolio, or Sub-Portfolio.</description>
        <label>Portfolio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summary_Customer</fullName>
        <active>true</active>
        <description>The parent account to one or more client accounts (e.g., District of Columbia). Selecting this Account Record Type will allow you to create a new organization which is linked to one or more clients.</description>
        <label>Summary Customer</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_Update_Inactive_Accounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&quot;Inactive&quot;),
   OR(
	ISCHANGED(Account_Plan_OI__c),
	ISCHANGED(Client_Account_Lead__c),
	ISCHANGED(Client_Classification__c),
	ISCHANGED(Client_QA_Director__c),
	ISCHANGED(CostPoint_Invoice_Customer__c),
	ISCHANGED(CostPoint_Invoice_Customer_ID__c),
	ISCHANGED(P_Global_Client_Account_Lead__c),
	ISCHANGED(Managing_Director_MC__c),
	ISCHANGED(Operations_Lead__c),
	ISCHANGED(Portfolio__c),
	ISCHANGED(Sub_Portfolio__c),
	ISCHANGED(Technology_Account_Lead__c),
	ISCHANGED( ParentId ),
	ISCHANGED(Description),
	ISCHANGED(Website),
	ISCHANGED(Type),
	ISCHANGED( OwnerId )
   )
)</errorConditionFormula>
        <errorMessage>ACC-002: Unable to update inactive Account. Please change Account status to active to make updates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Account_Owner_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED( OwnerId ) , AND($Profile.Name &lt;&gt; &apos;System Administrator&apos; , $Profile.Name &lt;&gt; &apos;AFS Sales Ops&apos;))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>ACC-001: Please contact your Portfolio OSP to change the owner on the Account.</errorMessage>
    </validationRules>
</CustomObject>